--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,15 @@ ANDROID_BUILD_MIN_SDK_VERSION=11
 ANDROID_BUILD_TARGET_SDK_VERSION=21
 ANDROID_BUILD_SDK_VERSION=21
 ANDROID_BUILD_TOOLS_VERSION=21.1.2
+
+GROUP=com.github.bmelnychuk
+POM_DESCRIPTION=Tree View implementation for android
+POM_URL=https://github.com/bmelnychuk/AndroidTreeView
+POM_SCM_URL=https://github.com/bmelnychuk/AndroidTreeView
+POM_SCM_CONNECTION=scm:git@github.com:bmelnychuk/AndroidTreeView.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:bmelnychuk/AndroidTreeView.git
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=unnamed_b
+POM_DEVELOPER_NAME=Bogdan Melnychuk
